--- a/manuscripts/24-accepted-ehs/part-3-measurement/s1-part-3-measurement.tex
+++ b/manuscripts/24-accepted-ehs/part-3-measurement/s1-part-3-measurement.tex
@@ -119,15 +119,17 @@
 \makesavenoteenv{longtable}
 \usepackage{graphicx}
 \makeatletter
-\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
-\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
-\makeatother
-% Scale images if necessary, so that they will not overflow the page
-% margins by default, and it is still possible to overwrite the defaults
-% using explicit options in \includegraphics[width, height, ...]{}
-\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
+\newsavebox\pandoc@box
+\newcommand*\pandocbounded[1]{% scales image to fit in text height/width
+  \sbox\pandoc@box{#1}%
+  \Gscale@div\@tempa{\textheight}{\dimexpr\ht\pandoc@box+\dp\pandoc@box\relax}%
+  \Gscale@div\@tempb{\linewidth}{\wd\pandoc@box}%
+  \ifdim\@tempb\p@<\@tempa\p@\let\@tempa\@tempb\fi% select the smaller of both
+  \ifdim\@tempa\p@<\p@\scalebox{\@tempa}{\usebox\pandoc@box}%
+  \else\usebox{\pandoc@box}%
+  \fi%
+}
 % Set default figure placement to htbp
-\makeatletter
 \def\fps@figure{htbp}
 \makeatother
 % definitions for citeproc citations
@@ -206,15 +208,13 @@
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \@ifpackageloaded{subcaption}{}{\usepackage{subcaption}}
 \makeatother
-\ifLuaTeX
-  \usepackage{selnolig}  % disable illegal ligatures
-\fi
+
 \usepackage{bookmark}
 
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Supplementary files for ``Methods in Causal Inference Part 2: Interaction, Mediation, and Time-Varying Treatments''},
+  pdftitle={Supplementary files for ``Methods in Causal Inference Part 3: Measurement Error and External Validity Threats''},
   pdfauthor={Joseph A. Bulbulia},
   colorlinks=true,
   linkcolor={blue},
@@ -223,8 +223,9 @@
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{Supplementary files for ``Methods in Causal Inference Part 2:
-Interaction, Mediation, and Time-Varying Treatments''}
+
+\title{Supplementary files for ``Methods in Causal Inference Part 3:
+Measurement Error and External Validity Threats''}
 
 \usepackage{academicons}
 \usepackage{xcolor}
@@ -237,7 +238,7 @@ Interaction, Mediation, and Time-Varying Treatments''}
       
 
 
-\date{2024-06-20}
+\date{2024-06-10}
 \begin{document}
 \maketitle
 
@@ -248,6 +249,7 @@ Interaction, Mediation, and Time-Varying Treatments''}
 \tableofcontents
 }
 \listoftables
+
 \newpage{}
 
 \subsection{S1. Glossary}\label{id-app-a}
@@ -297,7 +299,7 @@ the estimated treatment effect in the analytic sample \(S\) converges in
 probability to the true treatment effect in the target population \(T\):
 
 \[
-\lim_{n_S \to N_T} P(|\widehat{ATE}_{n_S} - ATE_{T}| < \epsilon) = 1
+\lim_{n_S \to \infty} P(|\widehat{ATE}_{n_S} - ATE_{T}| < \epsilon) = 1
 \]
 
 for any small positive value of \(\epsilon\).
@@ -323,7 +325,13 @@ measured covariates \(R\), allowing for valid projection from the source
 population to the target population.
 
 The transportability assumption is that there exists a function \(f\)
-such that: \[ \widehat{ATE}_{T} = f(n_S, R) \]
+such that: \[
+\widehat{ATE}_{T} = f(\widehat{ATE}_S, R)
+\]
+
+Here, \(\widehat{ATE}_S\) is the estimated average treatment effect from
+the source population, and \(R\) represents the set of covariates used
+for adjustment.
 
 Finding a suitable function \(f\) is the central challenge in adjusting
 for sampling bias and achieving transportability
@@ -382,10 +390,10 @@ Applying the Law of Total Probability, we can weight the average
 treatment effects by the conditional probability of the effect modifier
 \(F\):
 
-\[ \Delta_{\text{uncensored}} = \sum_{f} \left\{\mathbb{E}[Y \mid A=a^*, F=f, C=0] - \mathbb{E}[Y \mid A=a, F=f, C=0]\right\} \times \Pr(F=f \mid C=0) \]
+\[ \Delta_{\text{uncensored}} = \sum_{f} \Big\{\mathbb{E}[Y \mid A=a^*, F=f, C=0] - \mathbb{E}[Y \mid A=a, F=f, C=0]\Big\} \times \Pr(F=f \mid C=0) \]
 
 \[ 
-\Delta_{\text{censored}} = \sum_{f} \left\{\mathbb{E}[Y \mid A=a^*, F=f, C=1] - \mathbb{E}[Y \mid A=a, F=f, C=1]\right\} \times \Pr(F=f \mid C=1) 
+\Delta_{\text{censored}} = \sum_{f} \Big\{\mathbb{E}[Y \mid A=a^*, F=f, C=1] - \mathbb{E}[Y \mid A=a, F=f, C=1]\Big\} \times \Pr(F=f \mid C=1) 
 \]
 
 \paragraph{Assumption of Informative
@@ -595,7 +603,7 @@ z sample            |        2.47 | [ 2.45, 2.50] | < .001
 a sample × z sample |        0.51 | [ 0.47, 0.55] | < .001
 
 Model: y_sample ~ a_sample * z_sample (10000 Observations)
-Residual standard deviation: 0.494 (df = 9996)
+Sigma: 0.494 (df = 9996)
 \end{verbatim}
 
 We might be tempted to infer that weighting wasn't relevant to the
@@ -1057,6 +1065,7 @@ weights. \emph{American Journal of Epidemiology}, \emph{186}(8),
 1010--1014.
 
 \end{CSLReferences}
+
 
 
 
